chore: fix static code analysis issues
- Replace deprecated Paths.get() with Path.of() (Java 11+)
- Replace Collectors.toList() with Stream.toList() (Java 16+)
- Make gavs field final and properly initialize in both branches
- Remove redundant Path-String-Path conversion for dependenciesPath
- Remove unused imports (Paths, Collectors, ArrayList)